--- a/2022-2023/Machine Learning/1.lecture-introductions.tex
+++ b/2022-2023/Machine Learning/1.lecture-introductions.tex
@@ -1,4 +1,4 @@
-% Created 2022-08-31 Wed 12:29
+% Created 2022-11-09 Wed 09:23
 % Intended LaTeX compiler: pdflatex
 \documentclass[10pt]{beamer}
 \usepackage[utf8]{inputenc}
@@ -25,14 +25,16 @@
 \addtobeamertemplate{footnote}{}{\vspace{2ex}}
 \usepackage{xcolor}
 \definecolor{LightGray}{gray}{0.95}
+\setbeamertemplate{caption}[numbered]
+\usepackage{amsmath}
 \usepackage{fancyvrb}
 \DefineVerbatimEnvironment{verbatim}{Verbatim}{fontsize=\scriptsize}
-\DeclareGraphicsRule{.gif}{png}{.png}{`convert #1 `dirname #1`/`basename #1 .gif`-gif-converted-to.png}
+\DeclareGraphicsRule{.gif}{png}{-0.png}{`convert #1 `dirname #1`/`basename #1 .gif`-gif-converted-to.png}
 \DeclareGraphicsExtensions{.gif}
 \usepackage{animate}
 \usetheme{default}
 \author{Jay Morgan}
-\date{<TODO>}
+\date{9th October 2022}
 \title{Machine Learning}
 \subtitle{Lecture 1 - Introductions}
 \hypersetup{
@@ -40,19 +42,19 @@
  pdftitle={Machine Learning},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.1 (Org mode 9.5.4)}, 
+ pdfcreator={Emacs 28.1 (Org mode 9.5.5)}, 
  pdflang={English}}
 \begin{document}
 
 \maketitle
 
 \section*{Introduction}
-\label{sec:org9a86c78}
+\label{sec:orgac4a82f}
 
 \subsection*{Course Organisation}
-\label{sec:org5a55afb}
+\label{sec:orgab771b7}
 
-\begin{frame}[label={sec:orgbbd286c}]{Welcome!}
+\begin{frame}[label={sec:org5dff354}]{Welcome!}
 Welcome to all the new students! Here I am going to be talking about Machine Learning
 and all of the great things that this "technology" has to offer. To begin our course,
 I shall start with a bit of house keeping -- more specifically, I will be talking
@@ -61,7 +63,7 @@ subject after-all). In addition, I will tell you where you can find the resource
 related to the course and how you can contact me, should you have any questions.
 \end{frame}
 
-\begin{frame}[label={sec:orgbe61ba5}]{What this course is about?}
+\begin{frame}[label={sec:orgaf4f4e4}]{What this course is about?}
 In this course, we will be learning about Machine Learning: firstly, what Machine
 Learning actually is; secondly, we'll take a look at some of the algorithms within
 the scope of Machine Learning, and develop an intuition about how these algorithms
@@ -69,30 +71,33 @@ work and when they would be useful; and finally, how we can compare and evaluate
 algorithms we've learnt about.
 \end{frame}
 
-\begin{frame}[label={sec:orgcc7293e}]{How this course will be taught}
+\begin{frame}[label={sec:org626e08f}]{How this course will be taught}
 I intended to deliver this course via a series of lectures. These lectures will be
 accompanied by the PDF lecture slides, in which I will provide the definitions and
 provide reference links should you wish to do some extra reading.
 \end{frame}
 
-\begin{frame}[label={sec:org2257a41}]{Outline of the course}
+\begin{frame}[label={sec:org3e1bbdd}]{Outline of the course}
 \begin{center}
 \begin{tabular}{rlll}
 \toprule
-Lecture & Expected date & Length & Topic\\
+Lecture & Expected date & Type & Topic\\
 \midrule
-1 & NOW & 2 hours & Introduction\\
-2 & LATER & 2 hours & Linear models\\
-3 & Even later\ldots{} & 2 hours & Evaluation of models\\
+1 & 9th November & Theory & Introduction\\
+2 & 16th November & Theory & Linear models\\
+3 & 22nd November & Lab & Lab on Linear models\\
+4 & 25th November & Theory/Lab & Evaluation of models\\
+5 & 29th November & Theory/Lab & Support Vector Machines\\
+6 & 2nd December & Theory/Lab & Kernel methods\\
 \bottomrule
 \end{tabular}
 \end{center}
 \end{frame}
 
 \subsection*{Reading the lectures}
-\label{sec:org0322a80}
+\label{sec:org7d7c318}
 
-\begin{frame}[label={sec:org609a317},fragile]{Source code}
+\begin{frame}[label={sec:org7a9f785},fragile]{Source code}
  During the course, I would also like to supplement my algorithmic definitions and
 explanations with some programming code -- for this I will use the \href{https://www.python.org/}{Python} programming
 language. The code snippets would look something like:
@@ -109,7 +114,7 @@ print(y)
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org7907292},fragile]{Running the source code yourself}
+\begin{frame}[label={sec:orgb042edd},fragile]{Running the source code yourself}
  All of the source can be run by yourselves if you use the same python environment
 (i.e. that you have installed all the appropriate libraries). On the git repository,
 I've included the \href{https://git.sr.ht/\~jaymorgan/teaching/tree/master/item/2022-2023/Machine\%20Learning/environment.yml}{\texttt{environment.yml}} file used in the production of these lectures.
@@ -124,7 +129,7 @@ python <scripts>
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org7f8819c}]{References}
+\begin{frame}[label={sec:org4a063c3}]{References}
 In some cases, and is the norm with academic traditions, we'll want to include a
 reference, a link to previous written works.
 
@@ -139,7 +144,7 @@ found in the bibliography slide (or bottom of the webpage if you're viewing the 
 version of the lectures).
 \end{frame}
 
-\begin{frame}[label={sec:org3554ed8}]{About Me}
+\begin{frame}[label={sec:org4a47783}]{About Me}
 My name is Dr Jay Morgan. I am a researcher at the Université de Toulon, where I am
 developing Deep Learning models (a sub-field of Machine Learning research) for the
 study of astrophysical phenomenon.
@@ -157,7 +162,7 @@ I also publish libraries and source code online:
 If you have any questions, you can email me at jay.morgan@univ-tln.fr
 \end{frame}
 
-\begin{frame}[label={sec:orgb0572f7}]{Where you can find the resources}
+\begin{frame}[label={sec:org8d7e189}]{Where you can find the resources}
 I try to make this course as accessible as possible, which means that I host these
 slides in a variety of ways to suit you.
 
@@ -171,23 +176,25 @@ lectures from all years.
 \end{frame}
 
 \section*{What is learning, anyway?}
-\label{sec:org5b2904a}
+\label{sec:org8e90b9f}
 
 \subsection*{Learning about Learning}
-\label{sec:orgc1af7a3}
+\label{sec:org90bae5c}
 
-\begin{frame}[label={sec:orged7df74}]{Let's answer the question of learning}
+\begin{frame}[label={sec:orge687f7c}]{Let's answer the question of learning}
 We'll begin our journey into the world of Machine Learning by tackling the question
 of what it means to 'learn' -- how may a machine actually \emph{learn} anything?
 \end{frame}
 
-\begin{frame}[label={sec:org0749b53}]{Study of Mice}
+\begin{frame}[label={sec:orgf62d368}]{Bait-shyness}
+\begin{center}
+\includegraphics[height=0.7\textheight]{images/rat.jpg}
+\end{center}
+
 To begin to answer the question of learning, we may turn to nature for
 advice. Principally, if we look at the studies conducted with Mice we find some idea
-to notion of learning (Shalev-Shwartz, Shai and Ben-David, Shai, 2014).
-\end{frame}
+to notion of learning (Shalev-Shwartz, Shai and Ben-David, Shai, 2014). (Image by brgfx on Freepik)
 
-\begin{frame}[label={sec:orga45af28}]{Bait-shyness}
 When a rat encounters a novel source of food, it will first eat a little bit of
 it. If the food is edible for the rat, it will continue to eat the food, even in
 future encounters. If, however, on the initial contact with the food, the rat deems
@@ -196,9 +203,7 @@ process we call 'bait-shyness'.
 
 Here then we see the rat, on finding something new, learn from its experience, and
 use that knowledge of the experience for future encounters.
-\end{frame}
 
-\begin{frame}[label={sec:org3960f47}]{Bait-shyness}
 Our initial understanding of rat's bait-shyness was limited, but we've come to
 understand more about it. For instance, we learn that their learning process is more
 complex than originally thought. In a later experiment, where the 'poison' in the
@@ -211,9 +216,9 @@ infer a temporal relationship between the food and being shocked, while they can
 infer the same relationship with food and illness.
 \end{frame}
 
-\begin{frame}[label={sec:org4a0045e}]{Computer Programs}
+\begin{frame}[label={sec:orgd5ed126}]{Computer Programs}
 From these two examples of how rats may learn we see: the rat will make a guess about
-something now (i.e. that the food is not poisonous), it will find out how good this
+something new (i.e. that the food is not poisonous), it will find out how good this
 guess is (i.e. it either gets ill or it does not), and learn from how well its guess
 was for the future. We also see that its learning can be impacted by the rat's prior
 knowledge about how the world may work.
@@ -231,7 +236,7 @@ a tasks in \(T\), as measured by \(P\), improves with experience \(E\).
 (Mitchell, Tom M, 1997)
 \end{frame}
 
-\begin{frame}[label={sec:org9b6937b},fragile]{Quiz!}
+\begin{frame}[label={sec:orga3066b9},fragile]{Quiz!}
  What \emph{function} is being used here?
 
 \begin{verbatim}
@@ -241,7 +246,7 @@ a tasks in \(T\), as measured by \(P\), improves with experience \(E\).
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:orgcddaa9c},fragile]{Something more difficult\ldots{}}
+\begin{frame}[label={sec:orga53b68d},fragile]{Something more difficult\ldots{}}
  What \emph{values} are being used here?
 
 \begin{verbatim}
@@ -251,13 +256,18 @@ x * 5 + y   =  12
 \end{verbatim}
 \end{frame}
 
+\begin{frame}[label={sec:org70e4b51}]{When might we need Machine Learning}
+\begin{center}
+\includegraphics[height=0.7\textheight]{images/pdf-ocr.png}
+\end{center}
 
-\begin{frame}[label={sec:org96e0f33}]{When might we need Machine Learning}
 Why do we need computer programs that 'learn' anyway? We already have programming
 languages, why can't we just use them?
 
 Let's suppose we're creating a very simple Optical Character Recognition (OCR)
-program. This program looks at a PDF document and converts the text into something we
+program.
+
+This program looks at a PDF document and converts the text into something we
 can copy and paste. Part of this program's task is to take an individual character,
 say the number '8', and recognise that it's an 8 and add that to the already scanned
 text.
@@ -268,7 +278,7 @@ sizes. We could find the process of encompassing all different variations tireso
 if not impossible, and that's only for a single character!
 \end{frame}
 
-\begin{frame}[label={sec:org153a90f}]{When might we need Machine Learning}
+\begin{frame}[label={sec:org30909dd}]{When might we need Machine Learning}
 With Machine Learning, instead of enumerating all possible solutions within a
 programming language, we collect a bunch of examples of '8's and give them to the
 algorithm to learn from.
@@ -277,7 +287,7 @@ Through looking at these many different examples, the algorithm will/should be a
 to recognise what an 8 generally looks like.
 \end{frame}
 
-\begin{frame}[label={sec:org58d14cd}]{Different types of Learning}
+\begin{frame}[label={sec:orgb265e49}]{Different types of Learning}
 What we have just demonstrated by way of the OCR example, is the type of learning we
 call 'Supervised Learning'. We have many examples of input (lots of different kinds
 of handwritten 8's), and we tell the learning algorithm, that they are indeed the
@@ -293,7 +303,7 @@ following:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2e52c8c}]{Supervised Learning}
+\begin{frame}[label={sec:org29aee83}]{Supervised Learning}
 To better formalise Supervised Learning from our previous OCR example, Supervised
 Learning is when the learning algorithm "see's" or has access to both the input and
 output.
@@ -305,7 +315,7 @@ learning algorithm if the input is indeed an '8' or something else. Mathematical
 \(X = \{(x_1, y_1), (x_2, y_2), ..., (x_n, y_n)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:orgf9287a9}]{Unsupervised Learning}
+\begin{frame}[label={sec:orgcc94bab}]{Unsupervised Learning}
 In Unsupervised learning, we have again have a dataset \(X\), who's elements are only
 inputs. In other words, there are no corresponding labels for each input. Instead,
 the learning algorithm must learn inherent patterns in the data and create labels
@@ -318,7 +328,7 @@ algorithm ourselves. So it's sort of like a supervised learning setup, except th
 learning algorithm is providing the labels itself -- hence the self-supervised.
 \end{frame}
 
-\begin{frame}[label={sec:org0e17c3f}]{Reinforcement Learning}
+\begin{frame}[label={sec:org7bbda04}]{Reinforcement Learning}
 Reinforcement Learning is very different to both Supervised and Unsupervised
 Learning. Here is the type of learning you might be familiar with if you've seen 'AI'
 that learns to play video games. In this type of learning, we have the following
@@ -338,12 +348,12 @@ play-through.
 \end{frame}
 
 \subsection*{Terminology}
-\label{sec:orgc794af1}
+\label{sec:orgb6bb86e}
 
+\begin{frame}[label={sec:orgf13e762}]{What will our data look like?}
 In this section we shall take a look at the different types of data we might expect
 and the different terminology used to name them.
 
-\begin{frame}[label={sec:org8b6c3c2}]{What will our data look like?}
 Data in Machine Learning applications can come in a variety of different formats. The
 most typical data formats we might see are:
 
@@ -358,7 +368,7 @@ These are the initial formats, though, before actually doing any learning, we wi
 want to transform them into a different representation that we can use.
 \end{frame}
 
-\begin{frame}[label={sec:orgc002034}]{Tables}
+\begin{frame}[label={sec:org3afcc97}]{Tables}
 A table, or tabular, format is a \(n \times m\) set of data with \(n\) samples or
 examples, and \(m\) features for each sample. For example, suppose we have a table
 consisting the price of 100 different houses:
@@ -381,7 +391,7 @@ In a supervised learning setting, where we want to predict the price of a house 
 \(X = \{([3, 0, ...], 150,000), ([5, 10, ...], 200,000), \\..., ([10, 1000, ...], 2,000,000)\}\)
 \end{frame}
 
-\begin{frame}[label={sec:orga0f6e36}]{Images/Videos}
+\begin{frame}[label={sec:org6838791}]{Images/Videos}
 Images are composed of 2D or 3D arrays of numeric values. For example, in a RGB
 image that is 1024x500 pixels, we would have the array of size 1024x500x3 -- where 3
 is the red, green, and blue channel, respectively. If we have just a grayscale image,
@@ -393,7 +403,7 @@ through 24+ times a second. For a 24 frames per second video, we would have an a
 size of 1024x500x3x24 -- a 4-dimensional array.
 \end{frame}
 
-\begin{frame}[label={sec:orga13dbbc}]{Text}
+\begin{frame}[label={sec:orgbaecb3b}]{Text}
 Text and language data is perhaps one of the most flexible formats of data, in terms
 of the person implementing the Machine Learning algorithm is somewhat free in
 determining how to represent the language to the algorithm.
@@ -404,7 +414,7 @@ of words, parts of words, and even just characters. For example, consider:
 "this is a sentence, that shouldn't be misunderstood."
 \end{frame}
 
-\begin{frame}[label={sec:orgdea1eaa}]{Tokenisation of text}
+\begin{frame}[label={sec:org572d26f}]{Tokenisation of text}
 "this is a sentence, that shouldn't be misunderstood."
 
 We could 'tokenise' (the process of converting a string into a series of tokens that
@@ -419,7 +429,7 @@ These kinds of questions of how to best represent text and language we will talk
 about in later lectures!
 \end{frame}
 
-\begin{frame}[label={sec:org970533c}]{Time-series}
+\begin{frame}[label={sec:org9d809f8}]{Time-series}
 I named this section time-series to be as general as possible. Within the type
 'time-series', we could have the following types of information:
 
@@ -434,15 +444,15 @@ their meaning.
 \end{frame}
 
 \subsection*{Example Problems}
-\label{sec:org474699e}
+\label{sec:org25fda99}
 
-\begin{frame}[label={sec:org0016b29}]{Example Problems}
+\begin{frame}[label={sec:org3a03fc3}]{Example Problems}
 Throughout this course, we'll be using \emph{toy} datasets for the explanation of Machine
 Learning and its algorithms. In this section, we'll take a broad look over all the
 datasets that we'll come to be very familiar with.
 \end{frame}
 
-\begin{frame}[label={sec:orgecafba1}]{Types of Outputs -- Regression \& Classification}
+\begin{frame}[label={sec:orge15805c}]{Types of Outputs -- Regression \& Classification}
 First, however, I wish to explain the difference between the terms \emph{Regression} and
 \emph{Classification}.
 
@@ -455,7 +465,7 @@ In the following toy datasets, we'll see different types of predictions that fal
 under the regression/classification output type.
 \end{frame}
 
-\begin{frame}[label={sec:org8175397}]{Boston House Prices Dataset -- Tabular Regression}
+\begin{frame}[label={sec:org27182e4}]{Boston House Prices Dataset -- Tabular Regression}
 A dataset of 506 houses in Boston, USA, collected during US Census.
 
 \begin{itemize}
@@ -468,7 +478,7 @@ More information about each of the features can be found at: \url{https://www.cs
 (Harrison Jr, David and Rubinfeld, Daniel L, 1978)
 \end{frame}
 
-\begin{frame}[label={sec:orgefb60e1},fragile]{Boston House Prices -- example rows}
+\begin{frame}[label={sec:org31db6e5},fragile]{Boston House Prices -- example rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 import warnings
 from sklearn.datasets import load_boston
@@ -490,7 +500,7 @@ print(boston[:2])
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org6d62e8b}]{Boston House Prices -- concerns}
+\begin{frame}[label={sec:orgc4cf7b4}]{Boston House Prices -- concerns}
 The Boston dataset is an excellent dataset in the fact that it contains some ethical
 issues when it comes to Machine Learning. More specifically, some of the features in
 the data are 'dummy' variables for racial attributes (Carlisle, M., 2020). Moreover, these features show a
@@ -505,7 +515,7 @@ problem, and to demonstrate how easy it is to be accidentally unethical if you'r
 thinking about the data carefully enough. 
 \end{frame}
 
-\begin{frame}[label={sec:org60ccf51}]{Iris Dataset -- Tabular Classification}
+\begin{frame}[label={sec:orgf4fa726}]{Iris Dataset -- Tabular Classification}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.4\textwidth]{images/iris.jpg}
@@ -513,13 +523,13 @@ thinking about the data carefully enough.
 \end{figure}
 \end{frame}
 
-\begin{frame}[label={sec:org88c8732}]{Iris Dataset -- features}
+\begin{frame}[label={sec:org0226960}]{Iris Dataset -- features}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item 150 examples
 \item 4 features: Petal length/width, sepal length/width
-\item 1 classification: type of flower: \{viriginica, setosa, veriscolor\}
+\item 1 classification: type of flower: \{virginica, setosa, veriscolor\}
 
 \url{https://archive.ics.uci.edu/ml/datasets/iris}
 (Fisher, Ronald A, 1936)
@@ -536,7 +546,7 @@ thinking about the data carefully enough.
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgecdd829},fragile]{Iris Dataset -- example rows}
+\begin{frame}[label={sec:orge0118b0},fragile]{Iris Dataset -- example rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 from sklearn.datasets import load_iris
 iris = load_iris()
@@ -553,7 +563,7 @@ print(iris.head(2))
 \end{verbatim}
 \end{frame}
 
-\begin{frame}[label={sec:org98a2ebc}]{MNIST Dataset -- Image Classification}
+\begin{frame}[label={sec:org46dd72b}]{MNIST Dataset -- Image Classification}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=0.5\textwidth]{images/mnist.png}
@@ -567,7 +577,7 @@ A dataset of images (of size 28x28) containing handwritten digits from 0 - 9.
 (LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick, 1998)
 \end{frame}
 
-\begin{frame}[label={sec:orgc57d7ae}]{MNIST Dataset -- Features}
+\begin{frame}[label={sec:org20d38b9}]{MNIST Dataset -- Features}
 \begin{itemize}
 \item 60,000 images in the training dataset
 \item 10,000 images in the test dataset
@@ -575,14 +585,14 @@ A dataset of images (of size 28x28) containing handwritten digits from 0 - 9.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org425e1de},fragile]{MNIST Dataset -- Example Rows}
+\begin{frame}[label={sec:org1d34594},fragile]{MNIST Dataset -- Example Rows}
  \begin{minted}[frame=lines,linenos=true,firstnumber=last,fontsize=\footnotesize,bgcolor=LightGray,xleftmargin=5pt,tabsize=2,breaklines=true,numbersep=10pt]{python}
 from sklearn.datasets import fetch_openml
 mnist = fetch_openml("mnist_784").data[:2]
 \end{minted}
 \end{frame}
 
-\begin{frame}[label={sec:org1e9f8ab},fragile]{Large Movie Review Dataset -- Text Classification/Regression}
+\begin{frame}[label={sec:orgb853a8c},fragile]{Large Movie Review Dataset -- Text Classification/Regression}
  \begin{verbatim}
 Story of a man who has unnatural feelings for a pig. Starts out with a
 opening scene that is a terrific example of absurd comedy. A formal
@@ -657,9 +667,9 @@ Shona
 \end{frame}
 
 \subsection*{Concerns \& Considerations}
-\label{sec:orga46306b}
+\label{sec:org011f4f5}
 
-\begin{frame}[label={sec:org58f20f6}]{Concerns \& Considerations}
+\begin{frame}[label={sec:orgef70fef}]{Concerns \& Considerations}
 As we saw with the Boston house prices dataset, ethical concerns can easily arise
 when we use statistical analysis \& Machine Learning. But our use of Machine Learning
 carries many more concerns other than just racial biases. In this section, we'll
@@ -669,7 +679,7 @@ Learning models.
 \url{https://uksa.statisticsauthority.gov.uk/publication/ethical-considerations-in-the-use-of-machine-learning-for-research-and-statistics/}
 \end{frame}
 
-\begin{frame}[label={sec:orgdc5ec09}]{Compute resources -- environmental concerns}
+\begin{frame}[label={sec:orgdd96dd5}]{Compute resources -- environmental concerns}
 \begin{quote}
 Large-scale deployment of AI could also have both positive and negative impacts on
 the environment. Negative impacts include increased use of natural resources, such as
@@ -686,7 +696,7 @@ Sedol in 2016 – took 50,000 times as much power as the human brain to do so.
 ({European Parliament. Directorate General for Parliamentary Research Services.}, 2020)
 \end{frame}
 
-\begin{frame}[label={sec:org3a5efe4}]{Bias in language models}
+\begin{frame}[label={sec:orga260e42}]{Bias in language models}
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=1.0\textwidth]{images/debias.png}
@@ -696,7 +706,7 @@ Sedol in 2016 – took 50,000 times as much power as the human brain to do so.
 Biases exist in language models trained on news articles (Bolukbasi, Tolga and Chang, Kai-Wei and Zou, James Y and Saligrama, Venkatesh and Kalai, Adam T, 2016).
 \end{frame}
 
-\begin{frame}[label={sec:org8eb402f}]{Personal information}
+\begin{frame}[label={sec:org545298e}]{Personal information}
 In Machine Learning applications where data is generated (such as generating faces
 that don't exist), there is a possibility to expose personal information. For
 example, in a situation where these generative Machine Learning models create
@@ -706,7 +716,7 @@ the Machine Learning model could possibly leak personal information.
 (Arora, Anmol and Arora, Ananya, 2022)
 \end{frame}
 
-\begin{frame}[label={sec:org3b1ed34}]{Mental health of optimisation algorithms}
+\begin{frame}[label={sec:orgcbf7227}]{Mental health of optimisation algorithms}
 This example is more specific to how algorithms are used as opposed to their specific
 design. Yet, this should still be highlighted. We have seen increasing discussion
 surrounding the use of optimisation algorithms that try to increase the amount of
@@ -746,9 +756,9 @@ float Q_rsqrt( float number )
 \end{frame}
 
 \section*{Summary}
-\label{sec:org5d67861}
+\label{sec:org224648d}
 
-\begin{frame}[label={sec:orgafff6b2}]{What is Machine Learning}
+\begin{frame}[label={sec:org12b11a7}]{What is Machine Learning}
 \begin{itemize}
 \item We've taken a look at the different kinds of frameworks for learning -- animal
 behaviour with bait-shyness, and how that translates in computer programs.
@@ -762,7 +772,7 @@ Learning.
 \end{frame}
 
 \section*{Bibliography}
-\label{sec:org1296ddc}
+\label{sec:org35f4e83}
 
 \begin{frame}[fragile,allowframebreaks,label=]{Bibliography}
 \noindent
